--- a/templates/table_data.html
+++ b/templates/table_data.html
@@ -1,4 +1,4 @@
-<table>
+<table  class="table table-hover table-condensed">
 
     {% for header in table_headers %}
         <th>{{ header }}  </th>
@@ -11,5 +11,8 @@
             {% endfor %}
         </tr>
     {% endfor %}
-
 </table>
+	<p>
+		<a class="btn btn-info btn-small">New record</a>
+		<a class="btn btn-danger btn-small">Delete table</a>
+	</p>
