--- a/templates/table_data.html
+++ b/templates/table_data.html
@@ -3,16 +3,39 @@
     {% for header in table_headers %}
         <th>{{ header }}  </th>
     {% endfor %}
+        <th> Actions  </th>
 
     {% for row in table_data %}
         <tr id='{{ row["_id"] }}' >
             {% for header in table_headers %}
                 <td>{{ row[header] }}  </td>
             {% endfor %}
+			<td> 
+				<a class="edit_record" href="#"><i class="icon-edit"></i></a>
+				<a class="delete_record " href="#"><i class="icon-remove"></i></a>
+			 </td>
         </tr>
     {% endfor %}
 </table>
 	<p>
-		<a class="btn btn-info btn-small">New record</a>
-		<a class="btn btn-danger btn-small">Delete table</a>
+		<a id="new_record" class="btn btn-info btn-small">New record</a>
+		<a id="delete_table" class="btn btn-danger btn-small">Delete table</a>
 	</p>
+
+<script>
+	$(".edit_record").click( function() {
+		alert("not yet implemented, sorry!");
+	});
+
+	$(".delete_record").click( function() {
+		alert("not yet implemented, sorry!");
+	});
+
+	$("#new_record").click(function() {
+	alert("not yet implemented, sorry!");
+	});
+
+	$("#delete_table").click(function() {
+	alert("not yet implemented, sorry!");
+	});
+</script>
