--- a/templates/main.html
+++ b/templates/main.html
@@ -68,7 +68,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Whatever 2012</p>
+        <p>&copy; MongoDb explorer 2012</p>
 		
       </footer>
 	  
